Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-26066

gui applications font warning

    XMLWordPrintable

Details

    • Bug
    • Resolution: Done
    • P3: Somewhat important
    • None
    • 5.0.0
    • Build System
    • None
    • Windows 7, MSVC 2008
    • 1539e8e310ee3da8ae44a4b5b28d0f72b1345eb4

    Description

      A simple Gui application yields this warning at startup:

      QFontDatabase: Cannot find font directory 'E:\install_root\qt5\lib\fonts' - is Qt installed correctly?

      The warning is correct. There's no such directory.
      I've configured Qt with "-prefix E:\install_root" and called "nmake install".

      Either the install target must be fixed to install the fonts or the warning must not appear on Windows.

      Attachments

        For Gerrit Dashboard: QTBUG-26066
        # Subject Branch Project Status CR V

        Activity

          People

            kleint Friedemann Kleint
            jbornema Joerg Bornemann
            Votes:
            0 Vote for this issue
            Watchers:
            4 Start watching this issue

            Dates

              Created:
              Updated:
              Resolved:

              Gerrit Reviews

                There are no open Gerrit changes